@@ -16,10 +16,11 @@
 
 package org.openmetadata.service.resources.glossary;
 
+import static jakarta.ws.rs.core.Response.Status.BAD_REQUEST;
+import static jakarta.ws.rs.core.Response.Status.FORBIDDEN;
+import static jakarta.ws.rs.core.Response.Status.NOT_FOUND;
+import static jakarta.ws.rs.core.Response.Status.OK;
 import static java.util.Collections.emptyList;
-import static javax.ws.rs.core.Response.Status.BAD_REQUEST;
-import static javax.ws.rs.core.Response.Status.FORBIDDEN;
-import static javax.ws.rs.core.Response.Status.NOT_FOUND;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.openmetadata.common.utils.CommonUtil.listOf;
 import static org.openmetadata.common.utils.CommonUtil.listOrEmpty;
@@ -31,6 +32,7 @@ import static org.openmetadata.service.exception.CatalogExceptionMessage.entityI
 import static org.openmetadata.service.exception.CatalogExceptionMessage.glossaryTermMismatch;
 import static org.openmetadata.service.exception.CatalogExceptionMessage.notReviewer;
 import static org.openmetadata.service.resources.databases.TableResourceTest.getColumn;
+import static org.openmetadata.service.resources.glossary.GlossaryResourceTest.waitForTaskToBeCreated;
 import static org.openmetadata.service.security.SecurityUtil.authHeaders;
 import static org.openmetadata.service.util.EntityUtil.fieldAdded;
 import static org.openmetadata.service.util.EntityUtil.fieldDeleted;
@@ -39,13 +41,13 @@ import static org.openmetadata.service.util.EntityUtil.getFqn;
 import static org.openmetadata.service.util.EntityUtil.getId;
 import static org.openmetadata.service.util.EntityUtil.toTagLabels;
 import static org.openmetadata.service.util.TestUtils.*;
-import static org.openmetadata.service.util.TestUtils.UpdateType.CHANGE_CONSOLIDATED;
 import static org.openmetadata.service.util.TestUtils.UpdateType.MINOR_UPDATE;
-import static org.openmetadata.service.util.TestUtils.UpdateType.NO_CHANGE;
-import static org.openmetadata.service.util.TestUtils.UpdateType.REVERT;
 
+import jakarta.ws.rs.client.WebTarget;
+import jakarta.ws.rs.core.Response;
 import java.io.IOException;
 import java.net.URI;
+import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -57,20 +59,23 @@ import java.util.Objects;
 import java.util.Set;
 import java.util.UUID;
 import java.util.function.Predicate;
-import javax.ws.rs.core.Response;
+import java.util.stream.IntStream;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.http.client.HttpResponseException;
+import org.awaitility.Awaitility;
 import org.junit.jupiter.api.MethodOrderer;
 import org.junit.jupiter.api.Order;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInfo;
 import org.junit.jupiter.api.TestMethodOrder;
+import org.junit.jupiter.api.parallel.Execution;
+import org.junit.jupiter.api.parallel.ExecutionMode;
 import org.openmetadata.schema.api.data.CreateGlossary;
 import org.openmetadata.schema.api.data.CreateGlossaryTerm;
 import org.openmetadata.schema.api.data.CreateTable;
 import org.openmetadata.schema.api.data.TermReference;
 import org.openmetadata.schema.api.feed.ResolveTask;
-import org.openmetadata.schema.entity.data.EntityHierarchy__1;
+import org.openmetadata.schema.entity.data.EntityHierarchy;
 import org.openmetadata.schema.entity.data.Glossary;
 import org.openmetadata.schema.entity.data.GlossaryTerm;
 import org.openmetadata.schema.entity.data.GlossaryTerm.Status;
@@ -85,6 +90,7 @@ import org.openmetadata.schema.type.TagLabel;
 import org.openmetadata.schema.type.TaskDetails;
 import org.openmetadata.schema.type.TaskStatus;
 import org.openmetadata.service.Entity;
+import org.openmetadata.service.governance.workflows.WorkflowHandler;
 import org.openmetadata.service.resources.EntityResourceTest;
 import org.openmetadata.service.resources.databases.TableResourceTest;
 import org.openmetadata.service.resources.feeds.FeedResource.ThreadList;
@@ -95,6 +101,7 @@ import org.openmetadata.service.util.FullyQualifiedName;
 import org.openmetadata.service.util.JsonUtils;
 import org.openmetadata.service.util.ResultList;
 import org.openmetadata.service.util.TestUtils;
+import org.testcontainers.shaded.com.google.common.collect.Lists;
 
 @TestMethodOrder(MethodOrderer.OrderAnnotation.class)
 @Slf4j
@@ -260,18 +267,28 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
   }
 
   @Test
+  @Execution(ExecutionMode.SAME_THREAD)
   void patch_addDeleteReviewers(TestInfo test) throws IOException {
+    // Note: We are disabling the GlossaryTermApprovalWorkflow to avoid the Workflow Kicking it and
+    // adding extra ChangeDescriptions.
+    WorkflowHandler.getInstance().suspendWorkflow("GlossaryTermApprovalWorkflow");
     CreateGlossaryTerm create =
-        createRequest(getEntityName(test), "", "", null).withReviewers(null).withSynonyms(null);
+        createRequest(getEntityName(test), "desc", "", null).withReviewers(null).withSynonyms(null);
     GlossaryTerm term = createEntity(create, ADMIN_AUTH_HEADERS);
 
     // Add reviewer USER1, synonym1, reference1 in PATCH request
     String origJson = JsonUtils.pojoToJson(term);
     TermReference reference1 =
         new TermReference().withName("reference1").withEndpoint(URI.create("http://reference1"));
+
+    // NOTE: We are patching outside the `patchEntityAndCheck` method in order to be able to wait
+    // for the Task to be Created.
+    // The Task is created asynchronously from the Glossary Approval Workflow.
+    // This allows us to be sure the Status will be updated to IN_REVIEW.
     term.withReviewers(List.of(USER1_REF))
         .withSynonyms(List.of("synonym1"))
         .withReferences(List.of(reference1));
+
     ChangeDescription change = getChangeDescription(term, MINOR_UPDATE);
     fieldAdded(change, "reviewers", List.of(USER1_REF));
     fieldAdded(change, "synonyms", List.of("synonym1"));
@@ -286,11 +303,11 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
     term.withReviewers(List.of(USER1_REF, USER2_REF))
         .withSynonyms(List.of("synonym1", "synonym2"))
         .withReferences(List.of(reference1, reference2));
-    change = getChangeDescription(term, CHANGE_CONSOLIDATED);
-    fieldAdded(change, "reviewers", List.of(USER1_REF, USER2_REF));
-    fieldAdded(change, "synonyms", List.of("synonym1", "synonym2"));
-    fieldAdded(change, "references", List.of(reference1, reference2));
-    term = patchEntityAndCheck(term, origJson, ADMIN_AUTH_HEADERS, CHANGE_CONSOLIDATED, change);
+    change = getChangeDescription(term, MINOR_UPDATE);
+    fieldAdded(change, "reviewers", List.of(USER2_REF));
+    fieldAdded(change, "synonyms", List.of("synonym2"));
+    fieldAdded(change, "references", List.of(reference2));
+    term = patchEntityAndCheck(term, origJson, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change);
 
     // Remove a reviewer USER1, synonym1, reference1 in PATCH request
     // Changes from this PATCH is consolidated with the previous changes resulting in no change
@@ -298,11 +315,14 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
     term.withReviewers(List.of(USER2_REF))
         .withSynonyms(List.of("synonym2"))
         .withReferences(List.of(reference2));
-    change = getChangeDescription(term, CHANGE_CONSOLIDATED);
-    fieldAdded(change, "reviewers", List.of(USER2_REF));
-    fieldAdded(change, "synonyms", List.of("synonym2"));
-    fieldAdded(change, "references", List.of(reference2));
-    patchEntityAndCheck(term, origJson, ADMIN_AUTH_HEADERS, CHANGE_CONSOLIDATED, change);
+    change = getChangeDescription(term, MINOR_UPDATE);
+    fieldDeleted(change, "reviewers", List.of(USER1_REF));
+    fieldDeleted(change, "synonyms", List.of("synonym1"));
+    fieldDeleted(change, "references", List.of(reference1));
+    patchEntityAndCheck(term, origJson, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change);
+
+    // Note: We are re-enabling the GlossaryTermApprovalWorkflow.
+    WorkflowHandler.getInstance().resumeWorkflow("GlossaryTermApprovalWorkflow");
   }
 
   @Test
@@ -323,8 +343,9 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
     // Remove reference in PATCH request
     origJson = JsonUtils.pojoToJson(term);
     term.withReferences(null);
-    change = getChangeDescription(term, REVERT);
-    patchEntityAndCheck(term, origJson, ADMIN_AUTH_HEADERS, REVERT, change);
+    change = getChangeDescription(term, MINOR_UPDATE);
+    fieldDeleted(change, "references", List.of(reference1));
+    patchEntityAndCheck(term, origJson, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change);
   }
 
   @Test
@@ -356,6 +377,9 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
     // Creating a glossary term g2t1 should be in `Draft` mode (because glossary has reviewers)
     GlossaryTerm g2t1 = createTerm(glossary2, null, "g2t1");
     assertEquals(Status.DRAFT, g2t1.getStatus());
+    waitForTaskToBeCreated(g2t1.getFullyQualifiedName());
+    assertEquals(
+        Status.IN_REVIEW, getEntity(g2t1.getId(), authHeaders(USER1.getName())).getStatus());
     assertApprovalTask(g2t1, TaskStatus.Open); // A Request Approval task is opened
 
     // Non reviewer - even Admin - can't change the `Draft` to `Approved` status using PATCH
@@ -379,6 +403,9 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
     //
     GlossaryTerm g2t2 = createTerm(glossary2, null, "g2t2");
     assertEquals(Status.DRAFT, g2t2.getStatus());
+    waitForTaskToBeCreated(g2t2.getFullyQualifiedName());
+    assertEquals(
+        Status.IN_REVIEW, getEntity(g2t2.getId(), authHeaders(USER1.getName())).getStatus());
     Thread approvalTask =
         assertApprovalTask(g2t2, TaskStatus.Open); // A Request Approval task is opened
     int taskId = approvalTask.getTask().getId();
@@ -404,17 +431,23 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
     //
     GlossaryTerm g2t3 = createTerm(glossary2, null, "g2t3");
     assertEquals(Status.DRAFT, g2t3.getStatus());
+    waitForTaskToBeCreated(g2t3.getFullyQualifiedName());
+    assertEquals(
+        Status.IN_REVIEW, getEntity(g2t3.getId(), authHeaders(USER1.getName())).getStatus());
     approvalTask = assertApprovalTask(g2t3, TaskStatus.Open); // A Request Approval task is opened
     int taskId2 = approvalTask.getTask().getId();
 
     // Even admin can't close the task
     assertResponse(
-        () -> taskTest.closeTask(taskId2, "comment", ADMIN_AUTH_HEADERS),
+        () ->
+            taskTest.resolveTask(
+                taskId2, new ResolveTask().withNewValue("rejected"), ADMIN_AUTH_HEADERS),
         FORBIDDEN,
         notReviewer("admin"));
 
     // Reviewer closes the task. Glossary term is rejected. And task is resolved.
-    taskTest.closeTask(taskId2, "Rejected", authHeaders(USER1.getName()));
+    taskTest.resolveTask(
+        taskId2, new ResolveTask().withNewValue("rejected"), authHeaders(USER1.getName()));
     assertApprovalTask(g2t3, TaskStatus.Closed); // A Request Approval task is opened
     g2t3 = getEntity(g2t3.getId(), authHeaders(USER1.getName()));
     assertEquals(Status.REJECTED, g2t3.getStatus());
@@ -427,6 +460,9 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
     //
     final GlossaryTerm g2t4 = createTerm(glossary2, null, "g2t4");
     assertEquals(Status.DRAFT, g2t4.getStatus());
+    waitForTaskToBeCreated(g2t4.getFullyQualifiedName());
+    assertEquals(
+        Status.IN_REVIEW, getEntity(g2t4.getId(), authHeaders(USER1.getName())).getStatus());
     assertApprovalTask(g2t4, TaskStatus.Open); // A Request Approval task is opened
 
     // Non reviewer - even Admin - can't change the `Draft` to `Approved` status using PATCH
@@ -447,16 +483,27 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
 
     GlossaryTerm g2t5 = createTerm(glossary2, null, "g2t5");
     assertEquals(Status.DRAFT, g2t5.getStatus());
+    waitForTaskToBeCreated(g2t5.getFullyQualifiedName());
+    assertEquals(
+        Status.IN_REVIEW, getEntity(g2t5.getId(), authHeaders(USER1.getName())).getStatus());
     assertApprovalTask(g2t5, TaskStatus.Open); // A Request Approval task is opened
 
     String origJson = JsonUtils.pojoToJson(g2t5);
 
     // Add reviewer DATA_CONSUMER  in PATCH request
-    g2t5.withReviewers(List.of(DATA_CONSUMER_REF, USER1_REF, USER2_REF));
+    List<EntityReference> newReviewers = List.of(DATA_CONSUMER_REF, USER1_REF, USER2_REF);
+    g2t5.withReviewers(newReviewers);
 
-    ChangeDescription change = getChangeDescription(g2t5, MINOR_UPDATE);
-    fieldAdded(change, "reviewers", List.of(DATA_CONSUMER_REF));
-    g2t5 = patchEntityUsingFqnAndCheck(g2t5, origJson, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change);
+    double previousVersion = g2t5.getVersion();
+    g2t5 = patchEntityUsingFqn(g2t5.getFullyQualifiedName(), origJson, g2t5, ADMIN_AUTH_HEADERS);
+
+    // Due to the Glossary Workflow changing the Status from 'DRAFT' to 'IN_REVIEW' as a
+    // GovernanceBot, two changes are created.
+    assertEquals(g2t5.getVersion(), previousVersion + 0.1);
+    assertTrue(
+        g2t5.getReviewers().containsAll(newReviewers)
+            && newReviewers.containsAll(g2t5.getReviewers()));
+    assertEquals(g2t5.getStatus(), Status.IN_REVIEW);
 
     Thread approvalTask1 =
         assertApprovalTask(g2t5, TaskStatus.Open); // A Request Approval task is opened
@@ -495,13 +542,11 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
     term.withReviewers(List.of(USER1_REF, USER2_REF))
         .withSynonyms(List.of("synonym1", "synonym2"))
         .withReferences(List.of(reference1, reference2));
-    change = getChangeDescription(term, CHANGE_CONSOLIDATED);
-    fieldAdded(change, "reviewers", List.of(USER1_REF, USER2_REF));
-    fieldAdded(change, "synonyms", List.of("synonym1", "synonym2"));
-    fieldAdded(change, "references", List.of(reference1, reference2));
-    term =
-        patchEntityUsingFqnAndCheck(
-            term, origJson, ADMIN_AUTH_HEADERS, CHANGE_CONSOLIDATED, change);
+    change = getChangeDescription(term, MINOR_UPDATE);
+    fieldAdded(change, "reviewers", List.of(USER2_REF));
+    fieldAdded(change, "synonyms", List.of("synonym2"));
+    fieldAdded(change, "references", List.of(reference2));
+    term = patchEntityUsingFqnAndCheck(term, origJson, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change);
 
     // Remove a reviewer USER1, synonym1, reference1 in PATCH request
     // Changes from this PATCH is consolidated with the previous changes resulting in no change
@@ -509,11 +554,11 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
     term.withReviewers(List.of(USER2_REF))
         .withSynonyms(List.of("synonym2"))
         .withReferences(List.of(reference2));
-    change = getChangeDescription(term, CHANGE_CONSOLIDATED);
-    fieldAdded(change, "reviewers", List.of(USER2_REF));
-    fieldAdded(change, "synonyms", List.of("synonym2"));
-    fieldAdded(change, "references", List.of(reference2));
-    patchEntityUsingFqnAndCheck(term, origJson, ADMIN_AUTH_HEADERS, CHANGE_CONSOLIDATED, change);
+    change = getChangeDescription(term, MINOR_UPDATE);
+    fieldDeleted(change, "reviewers", List.of(USER1_REF));
+    fieldDeleted(change, "synonyms", List.of("synonym1"));
+    fieldDeleted(change, "references", List.of(reference1));
+    patchEntityUsingFqnAndCheck(term, origJson, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change);
   }
 
   @Test
@@ -534,20 +579,27 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
     // Remove reference in PATCH request
     origJson = JsonUtils.pojoToJson(term);
     term.withReferences(null);
-    change = getChangeDescription(term, REVERT);
-    patchEntityUsingFqnAndCheck(term, origJson, ADMIN_AUTH_HEADERS, REVERT, change);
+    change = getChangeDescription(term, MINOR_UPDATE);
+    fieldDeleted(change, "references", List.of(reference1));
+    patchEntityUsingFqnAndCheck(term, origJson, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change);
   }
 
   @Test
   void patch_usingFqn_addDeleteTags(TestInfo test) throws IOException {
-    // Create glossary term1 in glossary g1
+    Glossary glossary = createGlossary(getEntityName(test), null, null);
+
+    // Create glossary term1 in glossary
     CreateGlossaryTerm create =
-        createRequest(getEntityName(test), "", "", null).withReviewers(null).withSynonyms(null);
+        createRequest(getEntityName(test), "", "", null)
+            .withGlossary(glossary.getFullyQualifiedName())
+            .withReviewers(null)
+            .withSynonyms(null);
     GlossaryTerm term1 = createEntity(create, ADMIN_AUTH_HEADERS);
 
-    // Create glossary term11 under term1 in glossary g1
+    // Create glossary term11 under term1 in glossary
     create =
         createRequest("t1", "", "", null)
+            .withGlossary(glossary.getFullyQualifiedName())
             .withReviewers(null)
             .withSynonyms(null)
             .withParent(term1.getFullyQualifiedName());
@@ -662,17 +714,21 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
 
   @Test
   void patch_addDeleteStyle(TestInfo test) throws IOException {
-    // Create glossary term1 in glossary g1
+    Glossary glossary = createGlossary(getEntityName(test), null, null);
+
+    // Create glossary term1 in glossary
     CreateGlossaryTerm create =
         createRequest(getEntityName(test), "", "", null)
+            .withGlossary(glossary.getFullyQualifiedName())
             .withReviewers(null)
             .withSynonyms(null)
             .withStyle(null);
     GlossaryTerm term1 = createEntity(create, ADMIN_AUTH_HEADERS);
 
-    // Create glossary term11 under term1 in glossary g1
+    // Create glossary term11 under term1 in glossary
     create =
         createRequest("t1", "", "", null)
+            .withGlossary(glossary.getFullyQualifiedName())
             .withSynonyms(null)
             .withReviewers(null)
             .withSynonyms(null)
@@ -701,13 +757,15 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
     // Changes from this PATCH is consolidated with the previous changes resulting in no change
     json = JsonUtils.pojoToJson(term1);
     term1.setStyle(null);
-    change = getChangeDescription(term1, REVERT);
-    patchEntityAndCheck(term1, json, ADMIN_AUTH_HEADERS, REVERT, change);
+    change = getChangeDescription(term1, MINOR_UPDATE);
+    fieldDeleted(change, "style", style);
+    patchEntityAndCheck(term1, json, ADMIN_AUTH_HEADERS, MINOR_UPDATE, change);
     term1 = getEntity(term1.getId(), ADMIN_AUTH_HEADERS);
     assertNull(term1.getStyle());
   }
 
   @Test
+  @Order(Integer.MAX_VALUE)
   void delete_recursive(TestInfo test) throws IOException {
     Glossary g1 = createGlossary(test, null, emptyList());
 
@@ -827,7 +885,7 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
     GlossaryTerm childGlossaryTerm = createEntity(create, ADMIN_AUTH_HEADERS);
     String response =
         getResponseFormSearchWithHierarchy("glossary_term_search_index", "*childGlossaryTerm*");
-    List<EntityHierarchy__1> glossaries = JsonUtils.readObjects(response, EntityHierarchy__1.class);
+    List<EntityHierarchy> glossaries = JsonUtils.readObjects(response, EntityHierarchy.class);
     boolean isChild =
         glossaries.stream()
             .filter(glossary -> "g1".equals(glossary.getName())) // Find glossary with name "g1"
@@ -852,6 +910,27 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
             .orElse(false); // Return false if no glossary named "g1" was found
 
     assertTrue(isChild, "childGlossaryTerm should be a child of parentGlossaryTerm");
+  }
+
+  @Test
+  void get_entityWithDifferentFields_200_OK(TestInfo test) throws IOException {
+    CreateGlossaryTerm create =
+        createRequest(
+            getEntityName(test), "description", "displayName", Lists.newArrayList(USER1_REF));
+    create.setReviewers(List.of(USER1_REF));
+    create.setTags(List.of(USER_ADDRESS_TAG_LABEL, GLOSSARY2_TERM1_LABEL));
+
+    GlossaryTerm entity = createAndCheckEntity(create, ADMIN_AUTH_HEADERS);
+
+    waitForTaskToBeCreated(entity.getFullyQualifiedName(), 60000L * 3);
+
+    entity = validateGetWithDifferentFields(entity, false);
+    validateEntityReferences(entity.getOwners());
+    assertListNotEmpty(entity.getTags());
+
+    entity = validateGetWithDifferentFields(entity, true);
+    validateEntityReferences(entity.getOwners());
+    assertListNotEmpty(entity.getTags());
   }
 
   @Test
@@ -901,6 +980,10 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
       // List all entities and use it for checking pagination
       ResultList<GlossaryTerm> allEntities =
           listEntities(queryParams, 1000000, null, null, ADMIN_AUTH_HEADERS);
+      Awaitility.await()
+          .atMost(Duration.ofSeconds(1))
+          .until(() -> !allEntities.getData().isEmpty());
+
       int totalRecords = allEntities.getData().size();
 
       // List entity with "limit" set from 1 to numEntities size with fixed steps
@@ -987,6 +1070,21 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
     }
   }
 
+  @Test
+  void test_performance_listEntities() throws IOException {
+    Glossary glossary = createGlossary("词汇表三", null, null);
+    List<Map<String, Object>> result =
+        createTerms(glossary, IntStream.range(0, 500).mapToObj(i -> "term" + i).toList());
+
+    Map<String, String> queryParams = new HashMap<>();
+    queryParams.put("fields", "children,relatedTerms,reviewers,tags");
+    queryParams.put("limit", "10000");
+    queryParams.put("directChildrenOf", "词汇表三");
+    ResultList<GlossaryTerm> list =
+        assertTimeout(Duration.ofSeconds(3), () -> listEntities(queryParams, ADMIN_AUTH_HEADERS));
+    assertEquals(result.size(), list.getData().size());
+  }
+
   public GlossaryTerm createTerm(Glossary glossary, GlossaryTerm parent, String termName)
       throws IOException {
     return createTerm(glossary, parent, termName, glossary.getReviewers());
@@ -1007,13 +1105,32 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
       Map<String, String> createdBy)
       throws IOException {
     CreateGlossaryTerm createGlossaryTerm =
-        createRequest(termName, "", "", null)
+        createRequest(termName, "d", "", null)
             .withGlossary(getFqn(glossary))
             .withStyle(new Style().withColor("#FF5733").withIconURL("https://img"))
             .withParent(getFqn(parent))
             .withOwners(owners)
             .withReviewers(reviewers);
     return createAndCheckEntity(createGlossaryTerm, createdBy);
+  }
+
+  private List<Map<String, Object>> createTerms(Glossary glossary, List<String> termNames)
+      throws HttpResponseException {
+    String pathUrl = "/createMany/";
+    String glossaryFqn = getFqn(glossary);
+    WebTarget target = getCollection().path(pathUrl);
+    List<CreateGlossaryTerm> createGlossaryTerms =
+        termNames.stream()
+            .map(
+                name ->
+                    createRequest(name, "d", "", null)
+                        .withRelatedTerms(null)
+                        .withSynonyms(List.of("performance1", "performance2"))
+                        .withStyle(new Style().withColor("#FF5733").withIconURL("https://img"))
+                        .withGlossary(glossaryFqn))
+            .toList();
+    return TestUtils.post(
+        target, createGlossaryTerms, List.class, OK.getStatusCode(), ADMIN_AUTH_HEADERS);
   }
 
   public void assertContains(List<GlossaryTerm> expectedTerms, List<GlossaryTerm> actualTerms)
@@ -1045,8 +1162,7 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
         .withDescription("description")
         .withSynonyms(List.of("syn1", "syn2", "syn3"))
         .withGlossary(GLOSSARY1.getName())
-        .withRelatedTerms(Arrays.asList(getFqn(GLOSSARY1_TERM1), getFqn(GLOSSARY2_TERM1)))
-        .withReviewers(List.of(USER1_REF));
+        .withRelatedTerms(Arrays.asList(getFqn(GLOSSARY1_TERM1), getFqn(GLOSSARY2_TERM1)));
   }
 
   @Override
@@ -1099,11 +1215,8 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
             ? getEntityByName(term.getFullyQualifiedName(), fields, ADMIN_AUTH_HEADERS)
             : getEntity(term.getId(), fields, ADMIN_AUTH_HEADERS);
     assertListNull(
-        term.getChildren(),
-        term.getRelatedTerms(),
-        term.getReviewers(),
-        term.getOwners(),
-        term.getTags());
+        term.getChildren(), term.getRelatedTerms(), term.getReviewers(), term.getOwners());
+    assertTrue(term.getTags().isEmpty());
 
     fields = "children,relatedTerms,reviewers,owners,tags";
     term =
@@ -1232,7 +1345,7 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
       change = change == null ? getChangeDescription(term, update) : change;
       fieldUpdated(change, "parent", oldParent, newParent);
     } else {
-      update = update != null ? update : NO_CHANGE;
+      update = update != null ? update : MINOR_UPDATE;
       change = change == null ? getChangeDescription(term, update) : change;
     }
 
@@ -1275,6 +1388,7 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
     // List children glossary terms with  term1 as the parent and getting immediate children only
     Map<String, String> queryParams = new HashMap<>();
     queryParams.put("directChildrenOf", term1.getFullyQualifiedName());
+    queryParams.put("fields", "childrenCount,children");
     List<GlossaryTerm> children = listEntities(queryParams, ADMIN_AUTH_HEADERS).getData();
 
     assertEquals(term1.getChildren().size(), children.size());
@@ -1282,10 +1396,64 @@ public class GlossaryTermResourceTest extends EntityResourceTest<GlossaryTerm, C
     for (GlossaryTerm responseChild : children) {
       assertTrue(
           responseChild.getFullyQualifiedName().startsWith(responseChild.getFullyQualifiedName()));
+      if (responseChild.getChildren() == null) {
+        assertNull(responseChild.getChildrenCount());
+      } else {
+        assertEquals(responseChild.getChildren().size(), responseChild.getChildrenCount());
+      }
     }
 
     GlossaryTerm response = getEntity(term1.getId(), "childrenCount", ADMIN_AUTH_HEADERS);
     assertEquals(term1.getChildren().size(), response.getChildrenCount());
+
+    queryParams = new HashMap<>();
+    queryParams.put("directChildrenOf", glossary1.getFullyQualifiedName());
+    queryParams.put("fields", "childrenCount");
+    children = listEntities(queryParams, ADMIN_AUTH_HEADERS).getData();
+    assertEquals(term1.getChildren().size(), children.get(0).getChildrenCount());
+  }
+
+  @Test
+  @Override
+  protected void post_entityAlreadyExists_409_conflict(TestInfo test) throws HttpResponseException {
+    CreateGlossaryTerm create =
+        createRequest("post_entityAlreadyExists_409_conflict", "", "", null);
+    // Create first time using POST
+    createEntity(create, ADMIN_AUTH_HEADERS);
+    // Second time creating the same entity using POST should fail
+    HttpResponseException exception =
+        assertThrows(HttpResponseException.class, () -> createEntity(create, ADMIN_AUTH_HEADERS));
+    assertTrue(
+        exception
+            .getMessage()
+            .contains(
+                String.format(
+                    "A term with the name '%s' already exists in '%s' glossary.",
+                    create.getName(), create.getGlossary())));
+  }
+
+  @Test
+  void test_createDuplicateGlossaryTerm() throws IOException {
+    Glossary glossary = createGlossary("TestDuplicateGlossary", null, null);
+
+    GlossaryTerm term1 = createTerm(glossary, null, "TestTerm");
+    CreateGlossaryTerm createDuplicateTerm =
+        new CreateGlossaryTerm()
+            .withName("TestTerm")
+            .withDescription("check creation of duplicate terms")
+            .withGlossary(glossary.getName());
+
+    HttpResponseException exception =
+        assertThrows(
+            HttpResponseException.class,
+            () -> createEntity(createDuplicateTerm, ADMIN_AUTH_HEADERS));
+    assertTrue(
+        exception
+            .getMessage()
+            .contains(
+                String.format(
+                    "A term with the name '%s' already exists in '%s' glossary.",
+                    term1.getName(), glossary.getName())));
   }
 
   public Glossary createGlossary(
